------------------------------------------------------------------------
r1627 | gaser | 2020-05-18 12:49:31

Changed paths:
M       CHANGES.txt
A  +    cat_surf_map_atlas.m
M       cat_vol_groupwise_ls.m

(1) Fixed: Corrected false deletion of cat_surf_map_atlas.m
(2) Fixed: Corrected bug in cat_vol_groupwise_ls.m for non-linear registration
           where a variable was overwritten.
------------------------------------------------------------------------
r1626 | gaser | 2020-05-18 00:17:00 +0200 (Mo, 18 Mai 2020) | 11 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_long.m
M       cat_conf_stools.m
M       cat_long_multi_run.m
D       cat_surf_map_atlas.m
M       tbx_cfg_cat.m

Fixed: Corrected ROI menus for long. mode.


------------------------------------------------------------------------
r1625 | dahnke | 2020-05-17 16:04:25 +0200 (So, 17 Mai 2020) | 12 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_long.m
M       cat_conf_output.m
M       cat_long_main.m
MM      cat_surf_map_atlas.m
M       tbx_cfg_cat.m

(1) Fixed:  Corrected small bugs with wrong fields in longitudinal GUI.
(2) New:    Added surface atlas element to the longitudinal GUI.


------------------------------------------------------------------------
r1624 | dahnke | 2020-05-16 16:51:13 +0200 (Sa, 16 Mai 2020) | 22 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_extopts.m
M       cat_conf_output.m
M       cat_conf_stools.m
M       cat_conf_tools.m
M       cat_io_report.m
M       cat_long_createTPM.m
M       cat_run.m
M       cat_surf_create_TPM_hull_surface.m
D       html/vbm_vol_correct_slice_scaling_768.png
M       tbx_cfg_cat.m
M       templates_animals/chimpanzee_TPM.nii
M       templates_surfaces/bh.headbrain.TPM.gii

(1) New:			Added dependencies for TPM output.
(2) Changed:	Use hidden field to avoid GUI elements on simpler
							GUI levels rather than to avoid creation. 
(3) New:			Added another TPM level with smaller smoothing. 